# 2b2c_travel_app

./: .gitignore
backend/: pyproject.toml
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/my_agent/: agent.py
backend/my_agent/utils/: configuration.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
frontend/: index.html  package-lock.json
frontend/src/: index.css
frontend/src/components/thread/: index.tsx  markdown-text.tsx
frontend/src/components/thread/history/: index.tsx
frontend/src/components/thread/messages/: ai.tsx  human.tsx
frontend/src/providers/: Stream.tsx
